--- a/views/scalMPD/MP4/MP4600P.ejs
+++ b/views/scalMPD/MP4/MP4600P.ejs
@@ -79,7 +79,7 @@
         <form action="/MP4600" method="post"  class="ml-1 mt-1  flex-col bg">
           <input type="text" name="user" value="<%= user %>" hidden>
           <button   style="width: 170px;" type="submit" class="py-1 bg-gray-700 border border-gray-700 text-left pl-4  shadow-xl rounded-md px-2 hover:bg-gray-500 focus:bg-orange-500 text-white">
-            MP4: 600P
+            MP4: 720p-200k
            </button>
         </form>
         <form action="/MP4720" method="post"  class="ml-1 mt-1  flex-col bg">
@@ -140,7 +140,7 @@
       </div>
     </header>
     <main class="flex-1 items-left  ml-40 mt-4 px-1 w-full h-fit">
-        <h1 class="text-gray-500 text-balance mb-2">Video MP4:600P</h1>
+        <h1 class="text-gray-500 text-balance mb-2">Video MP4:720p-200k</h1>
         <div class="h-full max-h-80">
          <div class="grid grid-rows-3 grid-flow-col gap-1 w-4/6">
             <div id="scale256" style="height: 80vh;" class="row-start-1 row-span-4 bg-gray-200 shadow-md rounded-md h-90 px-1 py-2">
@@ -150,7 +150,6 @@
     </main>
     </div>
    </body>
-   <script src="/javascripts/hls.min.js"></script>
  
    <style>
 #textitle {
@@ -169,14 +168,6 @@
 
    </style>
 <script>
-     if (Hls.isSupported()) {
-              var video = document.getElementById('video');
-              var hls = new Hls();
-              hls.loadSource(video.src);
-              hls.attachMedia(video);
-            }else{
-                alert("Cannot stream HLS, use another video source");
-            }
    function downloadlink(el,id){
     var source="";
     switch(el){
