--- a/views/scalMPD/MP4/MP415000P.ejs
+++ b/views/scalMPD/MP4/MP415000P.ejs
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Decompresed-4300kbps</title>
+  <title>Decompresed-15000kbps</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body class="flex bg-gray-100 min-h-screen">
@@ -298,17 +298,17 @@
         </form>
         <form action="/MP41080" method="post"  class="ml-1 mt-1  flex-col bg">
           <input type="text" name="user" value="<%= user %>" hidden>
-          <button   style="width: 170px;" type="submit" class="py-1 bg-orange-400 border border-orange-400 text-left pl-4  shadow-xl rounded-md px-2 hover:bg-gray-500 focus:bg-orange-500 text-white">
+          <button   style="width: 170px;" type="submit" class="py-1 bg-gray-400 border border-gray-400 text-left pl-4  shadow-xl rounded-md px-2 hover:bg-gray-500 focus:bg-gray-500 text-white">
             4300kbps.Decomp
            </button>
         </form>
         <form action="/MP415000" method="post"  class="ml-1 mt-1  flex-col bg">
-          <input type="text" name="user" value="<%= user %>" hidden>
-          <button   style="width: 170px;" type="submit" class="py-1 bg-gray-700 border border-gray-700 text-left pl-4  shadow-xl rounded-md px-2 hover:bg-gray-500 focus:bg-gray-500 text-white">
-            15000kbps.Decomp
-           </button>
-        </form>
-
+            <input type="text" name="user" value="<%= user %>" hidden>
+            <button   style="width: 170px;" type="submit" class="py-1 bg-orange-400 border border-gray-700 text-left pl-4  shadow-xl rounded-md px-2 hover:bg-gray-500 focus:bg-orange-500 text-white">
+              15000kbps.Decomp
+             </button>
+          </form>
+  
 </div>
       </div>
     </div>
@@ -357,11 +357,11 @@
       </div>
     </header>
     <main class="flex-1 items-left  ml-40 mt-4 px-1 w-full h-fit">
-        <h1 class="text-gray-500 text-balance mb-2">Video Decompresed:4300kbps</h1>
+        <h1 class="text-gray-500 text-balance mb-2">Video Decompresed:15000kbps</h1>
         <div class="h-full max-h-80">
          <div class="grid grid-rows-3 grid-flow-col gap-1 w-4/6">
             <div id="scale256" style="height: 80vh;" class="row-start-1 row-span-4 bg-gray-200 shadow-md rounded-md h-90 px-1 py-2">
-                <video  data-dashjs-player="" autoplay src="/output/MP4/720p-600k.mp4" controls="true" style="width:100%;height:100%;border-radius: 8px 8px;"></video>
+                <video  data-dashjs-player="" autoplay src="/output/MP4/1080p-15000k.mp4" controls="true" style="width:100%;height:100%;border-radius: 8px 8px;"></video>
             </div>
             </div>
     </main>
