--- a/views/scalMPD/MP4/MP4720P.ejs
+++ b/views/scalMPD/MP4/MP4720P.ejs
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>MP4-720p-200k</title>
+  <title>Decompresed-600kbps</title>
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body class="flex bg-gray-100 min-h-screen">
@@ -275,7 +275,7 @@
         </div>
     </div>
        <button onclick="showMenu9(true)" class="focus:outline-none bg-blue-500   text-left  text-white flex justify-between items-center w-full py-1 space-x-1 px-2">
-        <p class="text-sm leading-5 animate-pulse ">HEVC MP4 </p>
+        <p class="text-sm leading-5 animate-pulse ">Video Decompresed </p>
         <svg id="icon9" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path d="M18 15L12 9L6 15" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
         </svg>
@@ -287,28 +287,35 @@
         <form action="/MP4600" method="post"  class="ml-1 mt-1  flex-col bg">
           <input type="text" name="user" value="<%= user %>" hidden>
           <button   style="width: 170px;" type="submit" class="py-1 bg-gray-700 border border-gray-700 text-left pl-4  shadow-xl rounded-md px-2 hover:bg-gray-500 focus:bg-orange-500 text-white">
-            MP4: 600P
+            200kbps.Decom
            </button>
         </form>
         <form action="/MP4720" method="post"  class="ml-1 mt-1  flex-col bg">
           <input type="text" name="user" value="<%= user %>" hidden>
           <button   style="width: 170px;" type="submit" class="py-1 bg-orange-400 border border-orange-400 text-left pl-4  shadow-xl rounded-md px-2 hover:bg-gray-500 focus:bg-orange-500 text-white">
-            MP4: 720P
+            600kbps.Decom
            </button>
         </form>
         <form action="/MP41080" method="post"  class="ml-1 mt-1  flex-col bg">
           <input type="text" name="user" value="<%= user %>" hidden>
           <button   style="width: 170px;" type="submit" class="py-1 bg-gray-700 border border-gray-700 text-left pl-4  shadow-xl rounded-md px-2 hover:bg-gray-500 focus:bg-orange-500 text-white">
-            MP4: 1080P
+            4300kbps.Decom
            </button>
         </form>
+        <form action="/MP415000" method="post"  class="ml-1 mt-1  flex-col bg">
+          <input type="text" name="user" value="<%= user %>" hidden>
+          <button   style="width: 170px;" type="submit" class="py-1 bg-gray-700 border border-gray-700 text-left pl-4  shadow-xl rounded-md px-2 hover:bg-gray-500 focus:bg-gray-500 text-white">
+            15000kbps.Decom
+           </button>
+        </form>
+
 </div>
       </div>
     </div>
   </aside>
  <div class="flex-grow text-gray-800">
     <header class="flex items-center h-20 px-6 sm:px-10 bg-white">
-      <h3 class="font-thin text-gray-700" id="textitle"  ondblclick="clears();">Université Badji Mokhtar-Annaba Departement Electronique</h3>
+      <h3 class="font-thin text-gray-700" id="textitle"  ondblclick="clears();"></h3>
       <button class="block sm:hidden relative flex-shrink-0 p-2 mr-2 text-gray-600 hover:bg-gray-100 hover:text-gray-800 focus:bg-gray-100 focus:text-gray-800 rounded-full">
         <span class="sr-only">Menu</span>
           <svg aria-hidden="true" fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-6 w-6">
@@ -349,7 +356,7 @@
       </div>
     </header>
     <main class="flex-1 items-left  ml-40 mt-4 px-1 w-full h-fit">
-        <h1 class="text-gray-500 text-balance mb-2">Video MP4:600P</h1>
+        <h1 class="text-gray-500 text-balance mb-2">Video Decompresed:600kbps</h1>
         <div class="h-full max-h-80">
          <div class="grid grid-rows-3 grid-flow-col gap-1 w-4/6">
             <div id="scale256" style="height: 80vh;" class="row-start-1 row-span-4 bg-gray-200 shadow-md rounded-md h-90 px-1 py-2">
@@ -422,10 +429,10 @@
    console.log(link);
    const link2=`https://raw.githubusercontent.com/ibrahi2023/appFMPEG/main/public/output/${source}`;
    document.getElementById(`dowloadurl${id}`).href=link;
-   document.getElementById("textitle").innerHTML=`<span class="text-orange-500">Copier URL Video:</span><span >${link2}</span>`
+   document.getElementById("textitle").innerHTML=`<span class="text-orange-500">Url:</span><span >${link2}</span>`
    }
   function clears(){
-   document.getElementById("textitle").innerHTML=`Université Badji Mokhtar-Annaba Departement Electronique`
+   document.getElementById("textitle").innerHTML=``
   }
 let icon0 = document.getElementById("icon0");
 let menu0= document.getElementById("menu0");
