--- a/views/SelecteStream.ejs
+++ b/views/SelecteStream.ejs
@@ -9,12 +9,11 @@
 </head>
 <body class="flex bg-gray-100 min-h-screen">
   <aside class="hidden sm:flex sm:flex-col">
-    <a href="#" class="inline-flex items-center justify-center h-20 w-20 bg-purple-600 hover:bg-purple-500 focus:bg-purple-500">
+    <div class="inline-flex items-center justify-center h-20 w-20 bg-purple-600 hover:bg-purple-500 focus:bg-purple-500">
       <span class="h-18 w-18  sm:ml-1 mr-2 bg-gray-100 rounded-full overflow-hidden">
         <img src="/images/ffmpeg.png" alt="user profile photo" class="h-full w-full object-cover">
       </span>
-    
-    </a>
+    </div>
     <div class="flex-grow flex flex-col justify-between text-gray-500 bg-gray-800">
       <div class="inline-flex items-center justify-center h-20 w-20 border-t border-gray-700">
           </div>
