--- a/views/scalMPD/scaleAuto.ejs
+++ b/views/scalMPD/scaleAuto.ejs
@@ -14,7 +14,7 @@
     <div id="Main" class="transform  xl:translate-x-0  ease-in-out transition duration-500 flex justify-start items-start h-full  w-full sm:w-48 bg-gray-800 flex-col">
      <h4 class="font-thin text-orange-100 text-current  bg-blue-500 w-full  px-2 ml-0 mt-0 py-1">MPEG-DASH ARB </h4>
      <div class="flex flex-col justify-start items-center px-2 border-b border-gray-600 w-full">
-      <button onclick="showMenu0(true)" class="focus:outline-none focus:text-indigo-200text-left  text-white flex justify-between items-center w-full py-1 space-x-4">
+      <button onclick="showMenu0(true)" class="focus:outline-none focus:text-indigo-200  text-left  text-white flex justify-between items-center w-full py-1 space-x-4">
         <p style="width:160px;padding:4px 4px ;padding-left:4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl ml-0  mt-0">Dash Auto Scal </p>
         <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
         <svg id="icon0" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -49,7 +49,7 @@
         </div>
     <h4 class="font-thin text-orange-100 text-current  bg-blue-500 w-full  px-2 ml-0 mt-0 py-1">Dash Profile Main</h4>
       <div class="flex flex-col justify-start items-center px-2 border-b border-gray-600 w-full  ">
-        <button onclick="showMenu1(true)" class="focus:outline-none focus:text-indigo-200text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
+        <button onclick="showMenu1(true)" class="focus:outline-none focus:text-indigo-200  text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
           <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl">Dash Profile Simple  </p>
           <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
  <svg id="icon1" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -79,7 +79,7 @@
         </div>
         <div class="flex flex-col justify-start items-center   px-2 border-b border-gray-600 w-full  ">
     
-        <button onclick="showMenu2(true)" class="focus:outline-none focus:text-indigo-200text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
+        <button onclick="showMenu2(true)" class="focus:outline-none focus:text-indigo-200  text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
             <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl">Dash Profile Full  </p>
             <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
  <svg id="icon2" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -110,7 +110,7 @@
       </div>
       <h4 class="font-thin text-orange-100 text-current  bg-blue-500  w-full px-2 ml-0 mt-0 mb-0 py-1">Codec Profile Main10</h4>
       <div class="flex flex-col justify-start items-center   px-2 border-b border-gray-600 w-full  ">
-        <button onclick="showMenu3(true)" class="focus:outline-none focus:text-indigo-200text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
+        <button onclick="showMenu3(true)" class="focus:outline-none focus:text-indigo-200  text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
             <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl">Dash Profile live  </p>
             <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
  <svg id="icon3" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -139,7 +139,7 @@
         </div>
       </div>
       <div class="flex flex-col justify-start items-center   px-2 border-b border-gray-600 w-full  ">
-        <button onclick="showMenu4(true)" class="focus:outline-none focus:text-indigo-200text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
+        <button onclick="showMenu4(true)" class="focus:outline-none focus:text-indigo-200  text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
             <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl">Dash Profile Simple  </p>
             <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
  <svg id="icon4" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -168,7 +168,7 @@
         </div>
       </div>
       <div class="flex flex-col justify-start items-center   px-2 border-b border-gray-600 w-full  ">
-        <button onclick="showMenu5(true)" class="focus:outline-none focus:text-indigo-200text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
+        <button onclick="showMenu5(true)" class="focus:outline-none focus:text-indigo-200  text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
             <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl">Dash Profile Full  </p>
             <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
  <svg id="icon5" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -198,7 +198,7 @@
       </div>
       <h4 class="font-thin text-orange-100 text-current  bg-blue-500 w-full px-2 ml-0 mt-0 mb-0 py-1">Codec Profile Main12</h4>
       <div class="flex flex-col justify-start items-center   px-2 border-b border-gray-600 w-full  ">
-        <button onclick="showMenu6(true)" class="focus:outline-none focus:text-indigo-200text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
+        <button onclick="showMenu6(true)" class="focus:outline-none focus:text-indigo-200  text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
             <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl">Dash Profile live  </p>
             <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
  <svg id="icon6" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -227,7 +227,7 @@
         </div>
       </div>
       <div class="flex flex-col justify-start items-center   px-2 border-b border-gray-600 w-full  ">
-        <button onclick="showMenu7(true)" class="focus:outline-none focus:text-indigo-200text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
+        <button onclick="showMenu7(true)" class="focus:outline-none focus:text-indigo-200  text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
             <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl">Dash Profile Simple  </p>
             <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
  <svg id="icon7" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -256,7 +256,7 @@
         </div>
       </div>
       <div class="flex flex-col justify-start items-center   px-2 border-b border-gray-600 w-full  ">
-        <button onclick="showMenu8(true)" class="focus:outline-none focus:text-indigo-200text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
+        <button onclick="showMenu8(true)" class="focus:outline-none focus:text-indigo-200  text-left  text-white flex justify-between items-center w-full py-1 space-x-4  ">
             <p style="width: 160px;padding: 4px 4px;padding-right: 4px;" class="text-sm leading-5 bg-gray-700 border  border-gray-700 rounded-xl">Dash Profile Full  </p>
             <span class="border border-gray-700 rounded-full bg-gray-700 p-1">
  <svg id="icon8" class="transform" width="21" height="21" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
