--- a/views/scalMPD/scaleAuto.ejs
+++ b/views/scalMPD/scaleAuto.ejs
@@ -369,12 +369,12 @@
         </div>
       </div>
     </header>
-    <main class="flex-1 items-left  ml-40 mt-4 px-1 w-full h-fit">
+    <main class="flex-1 items-left  pl-40 mt-4 px-1 w-full h-fit">
         <h1 class="text-gray-500 text-balance mb-2">Live tream MPD Dash:ABR Roles</h1>
         <div class="h-full max-h-80">
          <div class="grid grid-rows-3 grid-flow-col gap-1 w-4/6">
-            <div id="scale256" style="height: 80vh;" class="row-start-1 row-span-4 bg-gray-200 shadow-md rounded-md h-90 px-1 py-2">
-            <video id="video"   width='480px' height='360px' controls autoplay
+            <div id="scale256" style="height: 70vh;" class="row-start-1 row-span-4 bg-gray-200 shadow-md rounded-md h-80 px-1 py-2">
+            <video id="video"   width='480px' height='380px' controls autoplay
             src="/output/HEVC/playList.m3u8" style="width:100%;height:100%;border-radius: 8px 8px;">
      </video>
             </div>
