--- a/views/LivestreaMPD.ejs
+++ b/views/LivestreaMPD.ejs
@@ -325,7 +325,7 @@
       </div>
     </div>
   </aside>
-  <div class="flex-grow text-gray-800">
+  <div  class="flex-grow text-gray-800">
     <header class="flex items-center h-20 px-6 sm:px-10 bg-white">
       <h1 id="textitle"  ondblclick="clears();"  class="text-gray-700 font-extralight justify-start text-2xl items-start  animate-pulse" >Université Badji Mokhtar-Annaba Departement Electronique </h1>
       <button class="block sm:hidden relative flex-shrink-0 p-2 mr-2 text-gray-600 hover:bg-gray-100 hover:text-gray-800 focus:bg-gray-100 focus:text-gray-800 rounded-full">
@@ -367,12 +367,11 @@
         </div>
       </div>
     </header>
-    <main class="flex-1 items-left  ml-40 mt-4 px-1 w-full h-fit">
+    <main  class="flex-1 items-end pl-40 pt-4 px-1 w-fit h-fit">
         <h1 class="text-gray-500 text-balance mb-2">Live tream MPD Dash:256x144</h1>
-        
         <div class="h-full max-h-80">
          <div class="grid grid-rows-3 grid-flow-col gap-1 w-4/6">
-            <div id="scale256" style="height: 80vh;" class="row-start-1 row-span-4 bg-gray-200 shadow-md rounded-md h-90 px-1 py-2">
+            <div id="scale256" style="height: 70vh;" class="row-start-1 row-span-4 bg-gray-200 shadow-md rounded-md h-80 px-1 py-2">
             <video  data-dashjs-player="" autoplay src="/output/scale108sec/scale108sec.mpd" controls="true" style="width:100%;height:100%;border-radius: 8px 8px;"></video>
              <source src="/output/Dolphin_Boy.mp4" type="video/mp4"  >
             </video>
