--- a/views/SelecteStream.ejs
+++ b/views/SelecteStream.ejs
@@ -14,10 +14,9 @@
         <img src="/images/ffmpeg.png" alt="user profile photo" class="h-full w-full object-cover">
       </span>
     </div>
-    <div class="flex-grow flex flex-col justify-between text-gray-500 bg-gray-800">
-      <div class="inline-flex items-center justify-center h-20 w-20 border-t border-gray-700">
-          </div>
+    <div style="height:50vh;" class="flex-grow flex flex-col justify-between text-gray-500 bg-gray-800">
     </div>
+
   </aside>
   <div class="flex-grow text-gray-800">
     <header class="flex items-center h-20 px-6 sm:px-10 bg-white">
@@ -62,7 +61,7 @@
       </div>
     </header>
     <main class="flex-1 items-left  ml-20 mt-4 px-1 w-full h-fit">
-         <div class="grid grid-rows-3 grid-flow-col gap-3 w-5/6">
+         <div class="grid grid-rows-1 grid-flow-col gap-3 w-5/6">
             <div class="row-start-1 row-strow-span-4 bg-gray-200 shadow-md rounded-md h-50 p-10 py-2 pb-8 mr-10">
                 
               <form action="/LivestreaMPD" method="get">
