--- a/views/SelecteStream.ejs
+++ b/views/SelecteStream.ejs
@@ -60,7 +60,7 @@
         </div>
       </div>
     </header>
-    <main class="flex-1 items-left  ml-20 mt-4 px-1 w-full h-fit">
+    <main class="flex-1 items-center  pl-40 mt-4 px-1 w-full h-fit">
          <div class="grid grid-rows-1 grid-flow-col gap-3 w-5/6">
             <div class="row-start-1 row-strow-span-4 bg-gray-200 shadow-md rounded-md h-50 p-10 py-2 pb-8 mr-10">
                 
